--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 
 }
 
@@ -103,6 +104,7 @@ button {
     text-align: center;
     margin-bottom: 25px;
     border-width: 0px;
+    cursor: pointer;
     
 }
 
